--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,31 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 1
-    </ion-title>
-  </ion-toolbar>
+  <ion-navbar>
+    <ion-title size="large">Contact</ion-title>
+    <button ion-button icon-only clear (click)="addContact()">
+      <ion-icon name="add"></ion-icon>
+      </button>
+  </ion-navbar> 
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
+      <ion-title size="large">Contact</ion-title>
     </ion-toolbar>
   </ion-header>
+ 
+  <ion-list>
+    <ion-item-sliding *ngFor="let items of contacts;index as i">
+      <ion-item>
+      <p class="ion-padding">{{items.firstName}}</p> 
+      <p>{{items.lastName}}</p>
+      </ion-item>
+      <ion-item-options side="start">
+        <ion-item-option  (click)="edit(i)">edit</ion-item-option>
+        <ion-item-option color="danger" (click)=" deleteContact(i)">Delete</ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+ </ion-list>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+    
 </ion-content>
