--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+     Welcome
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,27 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
+      <ion-title size="large">Welcome</ion-title>
+      
     </ion-toolbar>
   </ion-header>
+  
+    <h2>Login</h2>
+   <!-- List of Text Items -->
+<ion-list>
+  <ion-item>
+    <ion-input type="text" [(ngModel)]="username" name="username">Username</ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-input value="password"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-checkbox ></ion-checkbox>
+    <ion-label>Remain logged in</ion-label>
+  </ion-item>
+</ion-list>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+<ion-button  routerLink="/account/{{username}}"shape="round" size="large" color="success">Login<ion-icon slot="end" name="log-in"></ion-icon></ion-button>
+
 </ion-content>
+
